[package]
name = "rptime-backend"
version = "0.0.1"
authors = ["MierBen <mrben838@gmail.com>"]
description = "Task-based CTF competition system."
edition = "2018"

[[bin]]
name = "rptime"
path = "src/main.rs"

[dependencies]
actix = "0.8.3"
actix-cors = "0.1.0"
actix-web = { version = "1.0.7", features = ["rust-tls"] }
actix-web-actors = "1.0.2"
actix-files = "0.1.4"
actix-session = "0.2.0"
actix-identity = "0.1.0"
actix-service = "0.4.2"
clap = "2.33.0"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
env_logger = "0.6.2"
failure = "0.1.5"
futures = "0.1.29"
lazy_static = "1.4.0"
log = "0.4.8"
num_cpus = "1.10.1"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
sparkpost = "0.5.3"
time = "0.1.42"
toml = "0.5.3"
uuid = { version = "0.7.4", features = ["v4"] }