[package]
name = "rptime-backend"
version = "0.1.0"
authors = ["MierBen <mrben838@gmail.com>"]
description = "Task-based CTF competition system."
edition = "2018"

[[bin]]
name = "rptime"
path = "src/main.rs"

[dependencies]
actix = "0.11.1"
actix-web = { version = "3.3.2", features = ["rust-tls"] }
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-service = "2.0.0"
chrono = { version = "0.4.9", features = ["serde"] }
clap = "2.33.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "serde_json"] }
env_logger = "0.8.3"
failure = "0.1.5"
futures = "0.3.15"
git2 = "0.13.20"
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["serde"] }
num_cpus = "1.10.1"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
simplelog = "0.10.0"
sparkpost = "0.5.3"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }
